[package]
authors = ["w3irdrobot <rob@w3ird.tech"]
edition = "2021"
license = "MIT"
name = "diffusion_to"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
futures-timer = "3.0.2"
hex = "0.4.3"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
sha2 = "0.10.8"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
