[package]
authors = ["w3irdrobot <rob@w3ird.tech"]
description = "Rust crate for interacting with the diffusion.to API"
edition = "2021"
homepage = "https://github.com/w3irdrobot/diffusion_to"
license = "MIT"
name = "diffusion_to"
repository = "https://github.com/w3irdrobot/diffusion_to"
version = "0.2.0"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
futures-timer = "3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1"
